--- a/src/components/pageTemplate/index.module.css
+++ b/src/components/pageTemplate/index.module.css
@@ -12,3 +12,21 @@
     justify-content: center;
     align-items: center;
 }
+
+.login{
+    display: flex;
+    flex-direction: column;
+}
+.container div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.formStyle{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
