--- a/src/components/pageTemplate/index.module.css
+++ b/src/components/pageTemplate/index.module.css
@@ -1,3 +1,8 @@
+*{
+    font-family: Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+
 .container{
     display: flex;
 }
@@ -6,22 +11,22 @@
     width: 50%;
 }
 
-.signup{
-    display: flex;
-    flex-direction: column;
+.heroText{
+    /*display: flex;*/
+    /*flex-direction: column;*/
     justify-content: center;
     align-items: center;
+    margin-left: 50px;
+    text-align: center;
+    margin-top: 30px;
 }
 
-.login{
-    display: flex;
-    flex-direction: column;
-}
+/*.login{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
 .container div{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 50%;
 }
 .formStyle{
     display: flex;
@@ -29,4 +34,27 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+}
+/*.container a{*/
+/*    text-decoration: underline;*/
+/*    padding: 20px;*/
+/*}*/
+
+.input{
+    display: flex;
+    gap: 195px;
+    font-size:  8px;
+}
+
+.inputField{
+    display: flex;
+    flex-direction: column;
+    border-radius: 7px;
+    border: 1px solid black;
+    width: 300px;
+    height: 35px;
+}
+
+.error{
+    color: red;
 }
